2013-01-19  Charlie Zender  <zender@uci.edu>

	* Fix bug in archived vlm_frc_mtx

2012-03-30  Charlie Zender  <zender@uci.edu>

	* Implement RRTM_SW and RRTM_LW in psd.pl

2011-12-31  Charlie Zender  <zender@uci.edu>

	* Change copyright year to 2012

2011-04-03  Charlie Zender  <zender@uci.edu>

	* Updated to remove g++ 4.5 warning messages

2008-04-10  Charlie Zender  <zender@uci.edu>

	* Finished and validated core normalization for coated spheres

2008-04-07  Charlie Zender  <zender@uci.edu>

	* Prescribe specfic surface area with --spc_sfc_cm2xg input switch

2008-01-23  Charlie Zender  <zender@uci.edu>

	* Implemented Lobatto angular grid by default
	Integrals seem to be off by factor of pi/2

	* cvs tag -c mie-3_4_9 c++ mie nco/src/nco_c++ idx_rfr
	Changes since mie-3_4_8: Phase function improvements
	Last version before attempt to default to Lobatto quadrature

2008-01-18  Charlie Zender  <zender@uci.edu>

	* Strangest thing just happened: BoH83 self-test completed correctly!

	* Add phase function diagnostics from Wis771 p. 1421 Table A2

	* Add stubs for new angular grid that uses efficient quadrature

2008-01-12  Charlie Zender  <zender@uci.edu>

	* Problem is that Legendre expansion coefficients archived by mie
	are much smaller than they should be.

	* Verified effective phase function is Rayleigh phase function
	for PSDs in Rayleigh scattering regime.

	* Verified that Legendre expansion coefficients in Rayleigh regime
	approximate well the Rayleigh phase function, i.e., second moment
	equals 0.1, zeroth moment = 1.0, all other moments = 0.0. Phew.

	* Change handling of Kelvin (curvature) effect and archive
	visibility as prc_cmp. These changes allow mie to complete
	for particle sizes < 1 nm. In turn this should allow 
	exploration of optics, phase functions, etc. in Rayleigh regime. 

2007-11-02  Charlie Zender  <zender@uci.edu>

	* cvs tag -c mie-3_4_8 c++ mie nco/src/nco_c++ idx_rfr